==> bazooka07/Ka-Radio32/main/vs1053.c <==
#define LOG_LOCAL_LEVEL ESP_LOG_VERBOSE
#define CHUNK	32
#include "vs1053.h"
#include "gpio.h"
#include "eeprom.h"
#include <string.h>
#include "driver/spi_master.h"
#include "soc/gpio_struct.h"
#include "driver/gpio.h"
#include <math.h>
#include "interface.h"
#include "app_main.h"
#include "audio_player.h"
#include "spiram_fifo.h"
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#define TAG "vs1053"

void ControlReset(uint8_t State){
	gpio_set_level(rst, State);
	vTaskDelay(100 / portTICK_PERIOD_MS);
}

bool VS1053_HW_init()
{
	gpio_num_t miso;
	gpio_num_t mosi;
	gpio_num_t sclk;
	gpio_num_t xcs;
	gpio_num_t xdcs;

	uint8_t spi_no; // the spi bus to use

	gpio_get_spi_bus(&spi_no,&miso,&mosi,&sclk);
	gpio_get_vs1053(&xcs,&rst,&xdcs,&dreq);

	// if xcs = 0 the vs1053 is not used
	if (xcs == GPIO_NONE)
	{
		vsVersion = 0;
		ESP_LOGE(TAG,"VS1053 not used");
		return false;
	}
	uint32_t freq =spi_cal_clock(APB_CLK_FREQ, 1400000, 128, NULL);
//	uint32_t freq =spi_cal_clock(APB_CLK_FREQ, 1600000, 128, NULL);
	ESP_LOGI(TAG,"VS1053 LFreq: %d",freq);
	spi_device_interface_config_t devcfg={
        .clock_speed_hz=freq,               //Clock out at x MHz
		.command_bits = 8,
		.address_bits = 8,
		.dummy_bits = 0,
		.duty_cycle_pos = 0,
		.cs_ena_pretrans = 0,
		.cs_ena_posttrans = 1,
		.flags = 0,
        .mode=0,                         //SPI mode
        .spics_io_num= xcs,               //XCS pin
        .queue_size=1,                          //We want to be able to queue x transactions at a time
        //.pre_cb=lcd_spi_pre_transfer_callback,  //Specify pre-transfer callback to handle D/C line
        .pre_cb=NULL,  //Specify pre-transfer callback to handle D/C line
		.post_cb = NULL
	};

	//slow speed
	ESP_ERROR_CHECK(spi_bus_add_device(spi_no, &devcfg, &vsspi));

	//high speed
	freq =spi_cal_clock(APB_CLK_FREQ, 6100000, 128, NULL);
	ESP_LOGI(TAG,"VS1053 HFreq: %d",freq);
	devcfg.clock_speed_hz = freq;
	devcfg.spics_io_num= xdcs;               //XDCS pin
	devcfg.command_bits = 0;
	devcfg.address_bits = 0;
	ESP_ERROR_CHECK(spi_bus_add_device(spi_no, &devcfg, &hvsspi));

	//Initialize non-SPI GPIOs
	gpio_config_t gpio_conf;
	gpio_conf.mode = GPIO_MODE_OUTPUT;
	gpio_conf.pull_up_en =  GPIO_PULLUP_DISABLE;
	gpio_conf.pull_down_en = GPIO_PULLDOWN_DISABLE;
	gpio_conf.intr_type = GPIO_INTR_DISABLE;
	gpio_conf.pin_bit_mask = ((uint64_t)(((uint64_t)1)<<rst));
	ESP_ERROR_CHECK(gpio_config(&gpio_conf));

	ControlReset(RESET);
    //gpio_set_direction(rst, GPIO_MODE_OUTPUT);

	gpio_conf.mode = GPIO_MODE_INPUT;
	gpio_conf.pull_up_en =  GPIO_PULLUP_DISABLE;
	gpio_conf.pull_down_en = GPIO_PULLDOWN_ENABLE;
	gpio_conf.intr_type = GPIO_INTR_DISABLE;
	gpio_conf.pin_bit_mask = ((uint64_t)(((uint64_t)1)<<dreq));
	ESP_ERROR_CHECK(gpio_config(&gpio_conf));

	//gpio_set_direction(dreq, GPIO_MODE_INPUT);
	//gpio_set_pull_mode(dreq, GPIO_PULLDOWN_ENABLE); //usefull for no vs1053 test
	return true;
}

void VS1053_WriteRegister(uint8_t addressbyte, uint8_t highbyte, uint8_t lowbyte)
{
    spi_transaction_t t;
	esp_err_t ret;

	if (vsVersion == 0) return;

    memset(&t, 0, sizeof(t));       //Zero out the transaction
	t.flags |= SPI_TRANS_USE_TXDATA;
	t.cmd = VS_WRITE_COMMAND;
	t.addr = addressbyte;
	t.tx_data[0] = highbyte;
	t.tx_data[1] = lowbyte;
    t.length= 16;
	while(VS1053_checkDREQ() == 0)taskYIELD ();
	spi_take_semaphore(vsSPI);
//    ESP_ERROR_CHECK(spi_device_transmit(vsspi, &t));  //Transmit!
    ret = spi_device_transmit(vsspi, &t);  //Transmit!
	if (ret != ESP_OK) ESP_LOGE(TAG,"err: %d, VS1053_WriteRegister(%d,%d,%d)",ret,addressbyte,highbyte,lowbyte);
	spi_give_semaphore(vsSPI);
	while(VS1053_checkDREQ() == 0);
}

uint16_t VS1053_ReadRegister(uint8_t addressbyte){
	uint16_t result;
    spi_transaction_t t;
	esp_err_t ret;
	if (vsVersion == 0) return 0;
    memset(&t, 0, sizeof(t));       //Zero out the transaction
	t.length=16;
	t.flags |= SPI_TRANS_USE_RXDATA	;
	t.cmd = VS_READ_COMMAND;
	t.addr = addressbyte;
	while(VS1053_checkDREQ() == 0) taskYIELD ();
	spi_take_semaphore(vsSPI);
	ret = spi_device_transmit(vsspi, &t);  //Transmit!
	if (ret != ESP_OK) ESP_LOGE(TAG,"err: %d, VS1053_ReadRegister(%d), read: %d",ret,addressbyte,(uint32_t)*t.rx_data);
	result =  (((t.rx_data[0]&0xFF)<<8) | ((t.rx_data[1])&0xFF)) ;
//	ESP_LOGI(TAG,"VS1053_ReadRegister data: %d %d %d %d",t.rx_data[0],t.rx_data[1],t.rx_data[2],t.rx_data[3]);
	spi_give_semaphore(vsSPI);
	while(VS1053_checkDREQ() == 0);
	return result;
}

void VS1053_ResetChip() {
	TickType_t delay = 30 / portTICK_PERIOD_MS;
	ControlReset(SET);
	ControlReset(RESET);
	for(int i=0; i<10; i++) {
		if(VS1053_checkDREQ() == 1) break;
		vTaskDelay(delay);
	}
}

void VS1053_regtest()
{
	int MP3Status = VS1053_ReadRegister(SPI_STATUSVS);
	int MP3Mode = VS1053_ReadRegister(SPI_MODE);
	int MP3Clock = VS1053_ReadRegister(SPI_CLOCKF);
	ESP_LOGI(TAG,"SCI_Status  = 0x%X",MP3Status);
	ESP_LOGI(TAG,"SCI_Mode (0x4800) = 0x%X",MP3Mode);
	ESP_LOGI(TAG,"SCI_ClockF = 0x%X",MP3Clock);
	ESP_LOGI(TAG,"VS Version (VS1053 is 4) = %d",vsVersion);
	//The 1053B should respond with 4. VS1001 = 0, VS1011 = 1, VS1002 = 2, VS1003 = 3, VS1054 = 4
}

void VS1053_Start(){
	VS1053_ResetChip();
	//Check DREQ
	if (VS1053_checkDREQ() == 0)
	{
		vsVersion = 0;
		ESP_LOGE(TAG,"NO VS1053 detected");
		return;
	}

// these 4 lines makes board to run on mp3 mode, no soldering required anymore
	VS1053_WriteRegister16(SPI_WRAMADDR, 0xc017); //address of GPIO_DDR is 0xC017
	VS1053_WriteRegister16(SPI_WRAM, 0x0003); //GPIO_DDR=3
	VS1053_WriteRegister16(SPI_WRAMADDR, 0xc019); //address of GPIO_ODATA is 0xC019
	VS1053_WriteRegister16(SPI_WRAM, 0x0000); //GPIO_ODATA=0
	vTaskDelay(150);

	int MP3Status = VS1053_ReadRegister(SPI_STATUSVS);
	vsVersion = (MP3Status >> 4) & 0x000F; //Mask out only the four version bits
//0 for VS1001, 1 for VS1011, 2 for VS1002, 3 for VS1003, 4 for VS1053 and VS8053,
//5 for VS1033, 7 for VS1103, and 6 for VS1063
	ESP_LOGI(TAG,"VS1053/VS1003 detected. MP3Status: %x, Version: %x",MP3Status,vsVersion);
   if (vsVersion == 4) // only 1053b
//		VS1053_WriteRegister(SPI_CLOCKF,0x78,0x00); // SC_MULT = x3, SC_ADD= x2
//		VS1053_WriteRegister16(SPI_CLOCKF,0xB800); // SC_MULT = x1, SC_ADD= x1
		VS1053_WriteRegister16(SPI_CLOCKF,0x8800); // SC_MULT = x3.5, SC_ADD= x1
//		VS1053_WriteRegister(SPI_CLOCKF,0x90,0x00); // SC_MULT = x3.5, SC_ADD= x1.5
	else
		VS1053_WriteRegister16(SPI_CLOCKF,0xB000);

	VS1053_SoftwareReset();
	while(VS1053_checkDREQ() == 0)taskYIELD ();

	VS1053_regtest();

	// enable I2C dac output of the vs1053
	if (vsVersion == 4) // only 1053
	{
		VS1053_WriteRegister16(SPI_WRAMADDR, 0xc017); //
		VS1053_WriteRegister16(SPI_WRAM, 0x00F0); //
		VS1053_I2SRate(g_device->i2sspeed);

	// plugin patch
		if  ((g_device->options&T_PATCH)==0)
		{
			LoadUserCodes() ;	// vs1053b patch and admix
//			VS1053_SetVolumeLine(-31);
//			VS1053_Admix(false);
		}
	}
	vTaskDelay(5);
	ESP_LOGI(TAG,"volume: %d",g_device->vol);
	setIvol( g_device->vol);
	VS1053_SetVolume( g_device->vol);
	VS1053_SetTreble(g_device->treble);
	VS1053_SetBass(g_device->bass);
	VS1053_SetTrebleFreq(g_device->freqtreble);
	VS1053_SetBassFreq(g_device->freqbass);
	VS1053_SetSpatial(g_device->spacial);
}

int VS1053_SendMusicBytes(uint8_t* music, uint16_t quantity){
	if(quantity ==0) return 0;
	int oo = 0;
//	while(VS1053_checkDREQ() == 0);taskYIELD ();
	while(quantity)
	{
//		if(VS1053_checkDREQ())
		{
			int t = quantity;
			if(t > CHUNK) t = CHUNK;
			VS1053_spi_write_char(hvsspi, &music[oo], t);
			oo += t;
			quantity -= t;
		} // else taskYIELD ();
	}
	return oo;
}
